Some configuration with various unit testing features.